@@ -852,6 +852,14 @@ class Article {
 			 );
 		}
 
+		/** 
+		 * If it's a non-existant page, stick the deletion log before the "noarticle" message.
+		 * This won't appear when editing a new page, but will when viewing a nonexistant one.
+		 */
+		if ( 0 == $this->getID() ) {
+			$this->showLogExtract( $wgOut );
+		}
+		
 		# Trackbacks
 		if ($wgUseTrackbacks)
 			$this->addTrackbacks();
